fix: dark mode now persists

--- a/src/components/Nav/nav.module.scss
+++ b/src/components/Nav/nav.module.scss
@@ -25,7 +25,7 @@
 
   a {
     text-decoration: none;
-    color: black;
+    color: var(--gray-100);
     &[aria-current="page"] {
       @include a-current;
     }
